2006-01-07  Don Allingham  <don@gramps-project.org>
	* src/FamilyView.py: fix gtk.Table's bizzare way of handling empty
	columns that are spanned.
	* src/GrampsLogger/_ErrorView.py: make dialog more HIG compliant

2006-01-06  Don Allingham  <don@gramps-project.org>
	* src/DisplayModels.py: don't access db maps directly
	* src/PeopleModel.py: don't access db maps directly
	* src/FamilyView.py: add gender symbol to primary person
	* src/GrampsDb/_GrampsBSDDB.py: provide access functions to avoid
	redirect map access
	* src/GrampsDb/_GrampsDbBase.py: provide access functions to avoid
	redirect map access
	* src/GrampsDb/_ReadGedcom.py: don't access db maps directly

2006-01-06  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsLogger/.cvsignore: Add to CVS.
	* src/const.py.in: Add directory for the db environment.
	* src/GrampsDb/_GrampsDbBase.py: Use new logging;
	(get_number_of_repositories): add method; (_del_*): add
	placeholder methods -- must be overriden in derived classes.
	* src/GrampsDb/_GrampsBSDDB.py: Use new logging; Add txn attribute
	to the database; (open_table): rename dbopen; (get_*_cursor): Pass
	txn to cursor constructors; (load): Open environment with
	transaction-capable flags, open tables with AUTO_COMMIT flag;
	(rebuild): use txn; (_delete_primary_from_reference_map): Use txn;
	(_update_reference_map): Use txn; (_del_*)L Use txn; (remove_*):
	remove unneeded functions (already in DbBase);
	(_get_obj_from_gramps_id): Use txn;
	(_commit_base,_do_commit,_find_from_handle): Add and use txn;
	(transaction_commit): create and commit txn; do not sync().	

2006-01-06 Richard Taylor <rjt-gramps@thegrindstone.me.uk>
        * src/Assistant.py: converted to gobject and added signals
	* src/GrampsLogger/_ErrorReportAssistant.py: uses new Assistant signals
	
2006-01-06 Richard Taylor <rjt-gramps@thegrindstone.me.uk>
        * src/gramps.py, src/gramps_main.py: integration of logging framework.

2006-01-06 Richard Taylor <rjt-gramps@thegrindstone.me.uk>